<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.application.soil.soils.SoilEdit"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/change_values"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPotash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/potassium"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/etPhos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/phosphorous"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/etAlkali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/alkali"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/etNitro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nitrogen"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/etIron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/iron_oxide"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/etLime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/lime"
        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorPrimary"/>

</LinearLayout>
